--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -81,7 +81,7 @@ Restated, we must be able to define some \emph{historical} lookup function $\his
 \begin{equation}
 \begin{aligned}
   \histlookup\colon \abracegroup[\ ]{
-    (\serviceaccount, \Nmax{\H_\¬timeslot - \mathsf{D} \dots \H_\¬timeslot}, \hash) &\to \optional{\blob} \\
+    \tuple{\serviceaccount, \Nmax{\H_\¬timeslot - \mathsf{D} \dots \H_\¬timeslot}, \hash} &\to \optional{\blob} \\
     (\mathbf{a}, t, \blake(\mathbf{p})) &\mapsto v : v \in \set{ \mathbf{p}, \none }
   }
 \end{aligned}
