--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -9,7 +9,7 @@ The serialization of state primarily involves placing all the various components
 We define the state-key constructor functions $C$ as:
 \begin{equation}
   C\colon\abracegroup{
-    \Nbits{8} \cup (\Nbits{8}, \serviceid) \cup \tup{\serviceid, \blob} &\to \bloboflen{31} \\
+    \Nbits{8} \cup \tup{\Nbits{8}, \serviceid} \cup \tup{\serviceid, \blob} &\to \bloboflen{31} \\
     i \in \Nbits{8} &\mapsto [i, 0, 0, \dots] \\
     (i, s \in \serviceid) &\mapsto [i, n_0, 0, n_1, 0, n_2, 0, n_3, 0, 0, \dots]\ \where n = \fixedencode{4}{s} \\
     (s, h) &\mapsto [n_0, a_0, n_1, a_1, n_2, a_2, n_3, a_3, a_4, a_5, \dots, a_{26}]\ \where n = \fixedencode{4}{s}, a = \blake(h)\interval{0}{27}
@@ -72,11 +72,11 @@ In the case of a regular leaf, the remaining 6 bits of the first byte are zeroed
 Formally, we define the encoding functions $B$ and $L$:
 \begin{align}
   B&\colon\abracegroup{
-    (\hash, \hash) &\to \bitstringoflen{512}\\
+    \tuple{\hash, \hash} &\to \bitstringoflen{512}\\
     (l, r) &\mapsto [0] \concat \text{bits}(l)\interval{1}{} \concat \text{bits}(r)
   }\\
   L&\colon\abracegroup{
-    (\bloboflen{31}, \blob) &\to \bitstringoflen{512}\\
+    \tuple{\bloboflen{31}, \blob} &\to \bitstringoflen{512}\\
     (k, v) &\mapsto \begin{cases}
       [1, 0] \concat \text{bits}(\fixedencode{1}{\len{v}})\interval{2}{} \concat \text{bits}(k) \concat \text{bits}(v) \concat [0, 0, \dots] &\when \len{v} \le 32\\
       [1, 1, 0, 0, 0, 0, 0, 0] \concat \text{bits}(k) \concat \text{bits}(\blake(v)) &\otherwise
@@ -87,7 +87,7 @@ Formally, we define the encoding functions $B$ and $L$:
 We may then define the basic Merklization function $\merklizestate$ as:
 \begin{align}
   \merklizestate(\thestate) &\equiv M(\set{ (\text{bits}(k) \mapsto \tup{k, v}) \mid (k \mapsto v) \in T(\thestate) })\\
-  M(d: \dict{\bitstring}{(\bloboflen{31}, \blob)}) &\equiv \begin{cases}
+  M(d: \dict{\bitstring}{\tuple{\bloboflen{31}, \blob}}) &\equiv \begin{cases}
     \zerohash &\when \len{d} = 0\\
     \blake(\text{bits}^{-1}(L(k, v))) &\when \values{d} = \set{ \tup{k, v} }\\
     \blake(\text{bits}^{-1}(B(M(l), M(r)))) &\otherwise\\
@@ -107,7 +107,7 @@ The Merkle tree is a cryptographic data structure yielding a hash commitment to 
 The underlying function for our Merkle trees is the \emph{node} function $N$, which accepts some sequence of blobs of some length $n$ and provides either such a blob back or a hash:
 \begin{equation}
   N\colon\abracegroup{
-    (\sequence{\bloboflen{n}}, \blob \to \hash) &\to \bloboflen{n} \cup \hash \\
+    \tuple{\sequence{\bloboflen{n}}, \blob \to \hash} &\to \bloboflen{n} \cup \hash \\
     (\mathbf{v}, H) &\mapsto \begin{cases}
       \zerohash &\when \len{\mathbf{v}} = 0 \\
       \mathbf{v}_0 &\when \len{\mathbf{v}} = 1 \\
@@ -121,7 +121,7 @@ The astute reader will realize that if our $\bloboflen{n}$ happens to be equival
 We also define the \emph{trace} function $T$, which returns each opposite node from top to bottom as the tree is navigated to arrive at some leaf corresponding to the item of a given index into the sequence. It is useful in creating justifications of data inclusion.
 \begin{equation}
   T\colon\abracegroup{
-    (\sequence{\bloboflen{n}}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash)\ &\to \sequence{\bloboflen{n} \cup \hash}\\
+    \tuple{\sequence{\bloboflen{n}}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash}\ &\to \sequence{\bloboflen{n} \cup \hash}\\
     (\mathbf{v}, i, H) &\mapsto \begin{cases}
       [N(P^\bot(\mathbf{v}, i), H)] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when \len{\mathbf{v}} > 1\\
       [] &\otherwise\\
@@ -148,7 +148,7 @@ We define the well-balanced binary Merkle function as $\merklizewb$:
 \begin{equation}
     \merklizewb\colon \abracegroup{
       \label{eq:simplemerkleroot}
-      (\sequence{\blob}, \blob \to \hash) &\to \hash \\
+      \tuple{\sequence{\blob}, \blob \to \hash} &\to \hash \\
       (\mathbf{v}, H) &\mapsto \begin{cases}
         H(\mathbf{v}_0) &\when \len{\mathbf{v}} = 1 \\
         N(\mathbf{v}, H) &\otherwise
@@ -165,17 +165,17 @@ We define the constant-depth binary Merkle function as $\merklizecd$. We define 
 \begin{align}
   \label{eq:constantdepthmerkleroot}
   \merklizecd&\colon \abracegroup{
-    (\sequence{\blob}, \blob \to \hash) &\to \hash\\
+    \tuple{\sequence{\blob}, \blob \to \hash} &\to \hash\\
     (\mathbf{v}, H) &\mapsto N(C(\mathbf{v}, H), H)
   }\\
   \label{eq:constantdepthsubtreemerklejust}
   \merklejustsubpath_x&\colon \abracegroup{
-    (\sequence{\blob}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash) &\to \sequence{\hash}\\
+    \tuple{\sequence{\blob}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash} &\to \sequence{\hash}\\
     (\mathbf{v}, i, H) &\mapsto T(C(\mathbf{v}, H), 2^xi, H)_{\dots\max(0, \ceil{\log_2(\max(1, \len{\mathbf{v}})) - x})}
   }\\
   \label{eq:constantdepthsubtreemerkleleafpage}
   \merklesubtreepage_x&\colon \abracegroup{
-    (\sequence{\blob}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash) &\to \sequence{\hash}\\
+    \tuple{\sequence{\blob}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash} &\to \sequence{\hash}\\
     (\mathbf{v}, i, H) &\mapsto \sq{\build{H(\token{\$leaf} \concat l)}{l \orderedin \mathbf{v}_{2^xi \dots \min(2^xi+2^x, \len{\mathbf{v}})}}}
   }
 \end{align}
@@ -187,7 +187,7 @@ As above, we may assume a default value for $H$ of the Blake 2b hash function, $
 For justifications and Merkle root calculations, a constancy preprocessor function $C$ is applied which hashes all data items with a fixed prefix ``leaf'' and then pads the overall size to the next power of two with the zero hash $\zerohash$:
 \begin{equation}
   C\colon\abracegroup{
-    (\sequence{\blob}, \blob \to \hash) &\to \sequence{\hash}\\
+    \tuple{\sequence{\blob}, \blob \to \hash} &\to \sequence{\hash}\\
     (\mathbf{v}, H) &\mapsto \mathbf{v}' \ \where \abracegroup[\;]{
       \len{\mathbf{v}}| &= 2^{\ceil{\log_2(\max(1, \len{\mathbf{v}}))}}\\
       \mathbf{v}'_i &= \begin{cases}
@@ -211,11 +211,11 @@ We define the \textsc{mmb} append function $\mmrappend$ as:
   \begin{aligned}
     \label{eq:mmrappend}
     \mmrappend&\colon\deffunc{
-      (\sequence{\optional{\hash}}, \hash, \blob\to\hash) &\to \sequence{\optional{\hash}}\\
+      \tuple{\sequence{\optional{\hash}}, \hash, \blob\to\hash} &\to \sequence{\optional{\hash}}\\
       (\mathbf{r}, l, H) &\mapsto P(\mathbf{r}, l, 0, H)
     }\\
     \where P&\colon\deffunc{
-      (\sequence{\optional{\hash}}, \hash, \N, \blob\to\hash) &\to \sequence{\optional{\hash}}\\
+      \tuple{\sequence{\optional{\hash}}, \hash, \N, \blob\to\hash} &\to \sequence{\optional{\hash}}\\
       (\mathbf{r}, l, n, H) &\mapsto \begin{cases}
         \mathbf{r} \append l &\when n \ge \len{\mathbf{r}}\\
         R(\mathbf{r}, n, l) &\when n < \len{\mathbf{r}} \wedge \mathbf{r}_n = \none\\
@@ -223,7 +223,7 @@ We define the \textsc{mmb} append function $\mmrappend$ as:
       \end{cases}
     }\\
     \also R&\colon\deffunc{
-      (\sequence{T}, \N, T) &\to \sequence{T}\\
+      \tuple{\sequence{T}, \N, T} &\to \sequence{T}\\
       (\mathbf{s}, i, v) &\mapsto \mathbf{s}'\ \where \mathbf{s}' = \mathbf{s} \exc \mathbf{s}'_i = v
     }
   \end{aligned}
